email template editor fix for fieldset spacing

--- a/Stylesheets/src/Neptune/Components/Partials/_email-template-editor.scss
+++ b/Stylesheets/src/Neptune/Components/Partials/_email-template-editor.scss
@@ -57,6 +57,10 @@
 		}
 	}
 
+	.name + .message {
+		padding-left: 0;
+	}
+
 	.name {
 		.prop {
 			display: inline-block;
